<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="text"
        android:textAlignment="center"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/EditA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="A"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/EditB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="B"
        android:textSize="32sp" />

    <Button
        android:id="@+id/buttonCal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CALCULATE"
        android:textSize="32sp" />

</LinearLayout>